--- a/Web/Pages/Mockups/Student/College_Trades_List.cshtml
+++ b/Web/Pages/Mockups/Student/College_Trades_List.cshtml
@@ -7,9 +7,10 @@
 }
 
 <div class="col-md-12 mrgn-tp-md mrgn-bttm-md">
-    <a href="#"><span class="glyphicon glyphicon-print pull-right mrgn-lft-md" alt="@Localizer["print"]"></span> </a>
-    <a href="#"><span class="glyphicon glyphicon-save pull-right" alt="@Localizer["save"]"></span> </a>
+    <a href="#"><span class="glyphicon glyphicon-print pull-right mrgn-lft-md" title="@Localizer["print"]" alt="@Localizer["print"]"></span> </a>
+    <a href="#"><span class="glyphicon glyphicon-save pull-right" title="@Localizer["save"]" alt="@Localizer["save"]"></span> </a>
 </div>
+
 <div class="mrgn-tp-lg">
     <h3 class="text-center">@Localizer["seagoing"]</h3>
 
