--- a/Web/Pages/Mockups/Student/Highschool.cshtml
+++ b/Web/Pages/Mockups/Student/Highschool.cshtml
@@ -11,11 +11,11 @@
     <div class="col-lg-4 col-sm-6">
         <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
             <div class="img-container">
-                <a href="@Localizer["link"]" target="_blank">
+                <a rel="external" href="@Localizer["link"]" target="_blank">
                     <img src="~/img/Student/CCGCollege.jpg" alt="Photo of" class="img-responsive" />
                 </a>
             </div>
-            <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-sm"><a style="text-decoration:none" href="@Localizer["link"]" target="_blank">@Localizer["ccgcollege"]</a></h4></figcaption>
+            <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-sm"><a style="text-decoration:none" rel="external" href="@Localizer["link"]" target="_blank">@Localizer["ccgcollege"]</a></h4></figcaption>
         </figure>
     </div>
 
