--- a/Web/Pages/Mockups/Student/University.cshtml
+++ b/Web/Pages/Mockups/Student/University.cshtml
@@ -11,11 +11,11 @@
     <div class="col-lg-4 col-sm-6">
         <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
             <div class="img-container">
-                <a href="@Localizer["link"]" target="_blank">
+                <a rel="external" href="@Localizer["link"]" target="_blank">
                     <img src="~/img/Student/CCGCollege.jpg" alt="Photo of" class="img-responsive" />
                 </a>
             </div>
-            <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-sm">@Localizer["ccgcollege"]</h4></figcaption>
+            <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-sm"><a rel="external" style="text-decoration:none" href="@Localizer["link"]" target="_blank">@Localizer["ccgcollege"]</a></h4></figcaption>
         </figure>
     </div>
     <div class="col-lg-4 col-sm-6">
@@ -25,7 +25,7 @@
                     <img src="~/img/CCGMember/AS.jpg" alt="Photo of" class="img-responsive" />
                 </a>
             </div>
-            <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-sm">@Localizer["business"]</h4></figcaption>
+            <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-sm"><a style="text-decoration:none" href="Student_List">@Localizer["business"]</a></h4></figcaption>
         </figure>
     </div>
     <div class="col-lg-4 col-sm-6">
@@ -35,7 +35,7 @@
                     <img src="~/img/CCGMember/CS.jpg" alt="Photo of" class="img-responsive" />
                 </a>
             </div>
-            <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-sm">@Localizer["computer"]</h4></figcaption>
+            <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-sm"><a style="text-decoration:none" href="Student_List">@Localizer["computer"]</a></h4></figcaption>
         </figure>
     </div>
     <div class="col-lg-4 col-sm-6">
@@ -45,7 +45,7 @@
                     <img src="~/img/CCGMember/ENG.jpg" alt="Photo of" class="img-responsive" />
                 </a>
             </div>
-            <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-sm">@Localizer["engineering"]</h4></figcaption>
+            <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-sm"><a style="text-decoration:none" href="Student_List">@Localizer["engineering"]</a></h4></figcaption>
         </figure>
     </div>
     <div class="col-lg-4 col-sm-6">
@@ -55,7 +55,7 @@
                     <img src="~/img/CCGMember/PM.jpg" alt="Photo of" class="img-responsive" />
                 </a>
             </div>
-            <figcaption class="caption text-center"><h4 class="h6  mrgn-tp-0 mrgn-bttm-0">@Localizer["arts"]<br /><small>@Localizer["language"]</small></h4></figcaption>
+            <figcaption class="caption text-center"><h4 class="h6  mrgn-tp-0 mrgn-bttm-0"><a href="Student_List">@Localizer["arts"]</a><br /><small>@Localizer["language"]</small></h4></figcaption>
         </figure>
     </div>
     <div class="col-lg-4 col-sm-6">
@@ -65,7 +65,7 @@
                     <img src="~/img/CCGMember/NU.jpg" alt="Photo of" class="img-responsive" />
                 </a>
             </div>
-            <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-sm">@Localizer["sciences"]</h4></figcaption>
+            <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-sm"><a href="Student_List">@Localizer["sciences"]</a></h4></figcaption>
         </figure>
     </div>
     <div class="col-lg-4 col-sm-6">
@@ -75,7 +75,7 @@
                     <img src="~/img/CCGMember/EC.jpg" alt="Photo of" class="img-responsive" />
                 </a>
             </div>
-            <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-0 mrgn-bttm-0">@Localizer["social"]<br /><small>@Localizer["economics"]</small></h4></figcaption>
+            <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-0 mrgn-bttm-0"><a href="Student_List">@Localizer["social"]</a><br /><small>@Localizer["economics"]</small></h4></figcaption>
         </figure>
     </div>
     <div class="clearfix"></div>
