--- a/Web/Pages/Mockups/Student/College_Electronic_List.cshtml
+++ b/Web/Pages/Mockups/Student/College_Electronic_List.cshtml
@@ -1,8 +1,11 @@
 ﻿@page
-@model Web.Pages.Mockups.Student.HS_Computer_ListModel
+@model Web.Pages.Mockups.Student.College_Electronic_ListModel
 @inject IViewLocalizer Localizer
 @{
+    ViewData["Title"] = "College Position Results";
+    var isEnglish = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName == "en";
 }
+
 <div class="col-md-12 mrgn-tp-md mrgn-bttm-md">
     <a href="#"><span class="glyphicon glyphicon-print pull-right mrgn-lft-md" title="@Localizer["print"]" alt="@Localizer["print"]"></span> </a>
     <a href="#"><span class="glyphicon glyphicon-save pull-right" title="@Localizer["save"]" alt="@Localizer["save"]"></span> </a>
@@ -39,14 +42,9 @@
         </thead>
         <tbody>
             <tr>
-                <td>CS-01</td>
-                <td>Programmer</td>
-                <td><a asp-page="Student_Details" role="button">@Localizer["More Details"]</a></td>
-            </tr>
-            <tr>
-                <td>RO-03</td>
-                <td>Marine Communications and Traffic Services (MCTS) - <a rel="external" target="_blank" href="@Localizer["link"]">@Localizer["PDAP"]</a></td>
-                <td><a asp-page="HS_MCTS_Details" role="button">@Localizer["More Details"]</a></td>
+                <td>EL-04</td>
+                <td>MELDEV Advanced - <a rel="external" target="_blank" href="@Localizer["link"]">@Localizer["PDAP"]</a></td>
+                <td><a asp-page="College_Elec_Details" role="button">@Localizer["More Details"]</a></td>
             </tr>
         </tbody>
     </table>
@@ -56,7 +54,7 @@
             <nav role="navigation" class="mrgn-bttm-lg">
                 <h2 class="wb-inv">Document navigation</h2>
                 <ul class="pager">
-                    <li class="previous"><a href="Highschool" class="btn btn-default" type="button" rel="prev">@Localizer["Previous"]</a></li>
+                    <li class="previous"><a href="College" class="btn btn-default" type="button" rel="prev">@Localizer["Previous"]</a></li>
                 </ul>
             </nav>
         </div>
