--- a/Web/Pages/Mockups/splash.cshtml
+++ b/Web/Pages/Mockups/splash.cshtml
@@ -3,19 +3,20 @@
 
 
 
-<section class="container">
-
+<main property="mainContentOfPage">
+    <h1 property="name" id="wb-cont">Career Competency Tool</h1>
+    <img src="~/img/CCGMember/CCGbanner.jpg" class="img-responsive cmpgn-img" alt="">
     <div class="col-md-12">
         <h1 class="wb-inv">Language selection - Career Competency Tool / <span lang="fr">Sélection de la langue - Outil de compétence professionnelle</span></h1>
         <section class="col-md-6">
-            <h2 class="h3 text-center">Career Competency Tool</h2>
+            <h2 class="h3 text-center">Canadian Coast Guard</h2>
             <ul class="list-unstyled">
                 <li><a class="btn btn-lg btn-primary btn-block" href="/en/Mockups/Index">English</a></li>
                 <li><a class="btn btn-lg btn-default btn-block mrgn-tp-sm" href="../../License-en.html" rel="license">Terms and conditions of use</a></li>
             </ul>
         </section>
         <section class="col-md-6" lang="fr">
-            <h2 class="h3 text-center">Outil de compétence professionnelle</h2>
+            <h2 class="h3 text-center">Garde côtière canadienne</h2>
             <ul class="list-unstyled">
                 <li><a class="btn btn-lg btn-primary btn-block" lang="fr" href="/fr/Mockups/Index">Français</a></li>
                 <li><a class="btn btn-lg btn-default btn-block mrgn-tp-sm" href="../../Licence-fr.html" rel="license">Conditions régissant l'utilisation</a></li>
@@ -23,4 +24,4 @@
         </section>
     </div>
 
-</section>
+</main>
