--- a/Web/Pages/Mockups/Student/Student_List.cshtml
+++ b/Web/Pages/Mockups/Student/Student_List.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model Web.Pages.Student.Student_ListModel
+@model Web.Pages.Mockups.Student.Student_ListModel
 @inject IViewLocalizer Localizer
 @{
     ViewData["Title"] = "Student Position Results";
