--- a/Web/Pages/CCGMember/SearchType.cshtml
+++ b/Web/Pages/CCGMember/SearchType.cshtml
@@ -11,7 +11,7 @@
 
 
 <h2><b>@Localizer["Question1"]</b></h2>
-<a asp-page="Similar/SimilarSearch" asp-route-positionid="@Model.PositionId">
+<a asp-page="Similar/SimilarSearch" asp-all-route-data="@paramdata">
     <div class="col-sm-4 mrgn-bttm-md">
         <figure>
             <img src="~/img/CCGMember/similar.jpg" alt="" class="img-responsive thumbnail mrgn-bttm-sm" />
@@ -19,7 +19,7 @@
         </figure>
     </div>
 </a>
-<a asp-page="Compare/AllObjective" asp-route-positionid="@Model.PositionId">
+<a asp-page="Compare/AllObjective" asp-route-positionid="@paramdata">
     <div class="col-sm-4 mrgn-bttm-md">
         <figure>
             <img src="~/img/CCGMember/compare.jpg" alt="" class="img-responsive thumbnail mrgn-bttm-sm" />
