--- a/Web/Pages/Student/Index.cshtml
+++ b/Web/Pages/Student/Index.cshtml
@@ -11,7 +11,7 @@
 
         <div class="col-sm-4">
             <figure>
-                <a class="nav-link" href="Highschool">
+                <a class="nav-link" asp-page="HighSchool/AllPositions">
                     <img src="~/img/Student/Highschool.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                 </a>
                 <figcaption><h4 class="text-center">@Localizer["HighSchool"]</h4></figcaption>
@@ -19,7 +19,7 @@
         </div>
         <div class="col-sm-4">
             <figure>
-                <a href="College">
+                <a asp-page="College/AllPositions">
                     <img src="~/img/Student/TechCollege.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                 </a>
                 <figcaption><h4 class="text-center">@Localizer["TechCollege"]</h4></figcaption>
@@ -27,7 +27,7 @@
         </div>
         <div class="col-sm-4">
             <figure>
-                <a href="University">
+                <a asp-page="University/AllPositions">
                     <img src="~/img/Student/University.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                 </a>
                 <figcaption><h4 class="text-center">@Localizer["University"]</h4></figcaption>
