--- a/Web/Pages/Student/College/AllPositions.cshtml
+++ b/Web/Pages/Student/College/AllPositions.cshtml
@@ -5,82 +5,91 @@
     ViewData["Title"] = "AllPositions";
 }
 
-<section role="contentinfo">
+    <section role="contentinfo">
 
-    <h2>@Localizer["Q1"]</h2>
+        <h2>@Localizer["Q1"]</h2>
 
-    <div class="col-sm-4">
-        <figure>
-            <a asp-page="Administrative">
-                <img src="~/img/CCGMember/AS.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
-            </a>
-            <figcaption class="text-center"><h5>@Localizer["admin"]</h5></figcaption>
-        </figure>
-    </div>
-    <div class="col-sm-4">
-        <figure>
-            <a asp-page="Computer">
-                <img src="~/img/CCGMember/CS.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
-            </a>
-            <figcaption class="text-center"><h5>@Localizer["computer"]</h5></figcaption>
-        </figure>
-    </div>
-    <div class="col-sm-4">
-        <figure>
-            <a asp-page="Cook">
-                <img src="~/img/CCGMember/GS.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
-            </a>
-            <figcaption class="text-center"><h5>@Localizer["cook"]</h5></figcaption>
-        </figure>
-    </div>
-    <div class="col-sm-4">
-        <figure>
-            <a asp-page="Electrical">
-                <img src="~/img/CCGMember/GT.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
-            </a>
-            <figcaption class="text-center"><h5>@Localizer["electrical"]</h5></figcaption>
-        </figure>
-    </div>
-    <div class="col-sm-4">
-        <figure>
-            <a asp-page="Electronics">
-                <img src="~/img/CCGMember/EL.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
-            </a>
-            <figcaption class="text-center"><h5>@Localizer["electronics"]</h5></figcaption>
-        </figure>
-    </div>
-    <div class="col-sm-4">
-        <figure>
-            <a asp-page="GeographicalInformation">
-                <img src="~/img/Student/geo.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
-            </a>
-            <figcaption class="text-center"><h5>@Localizer["geo"]</h5></figcaption>
-        </figure>
-    </div>
-    <div class="col-sm-4">
-        <figure>
-            <a asp-page="NauticalDeck">
-                <img src="~/img/CCGMember/SC.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
-            </a>
-            <figcaption class="text-center"><h5>@Localizer["deck"]</h5></figcaption>
-        </figure>
-    </div>
-    <div class="col-sm-4">
-        <figure>
-            <a asp-page="NauticalEngineering">
-                <img src="~/img/CCGMember/Officer-Eng.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
-            </a>
-            <figcaption class="text-center"><h5>@Localizer["engineering"]</h5></figcaption>
-        </figure>
-    </div>
-    <div class="col-sm-4">
-        <figure>
-            <a class="nav-link" asp-page="Trades">
-                <img src="~/img/CCGMember/GL.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
-            </a>
-            <figcaption class="text-center"><h5>@Localizer["trades"]</h5></figcaption>
-        </figure>
-    </div>
-
-</section>
+        <div class="col-sm-4">
+            <figure>
+                <a asp-page="Administrative">
+                    <img src="~/img/CCGMember/AS.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                </a>
+                <figcaption class="text-center"><h5>@Localizer["admin"]</h5></figcaption>
+            </figure>
+        </div>
+        <div class="col-sm-4">
+            <figure>
+                <a asp-page="Computer">
+                    <img src="~/img/CCGMember/CS.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                </a>
+                <figcaption class="text-center"><h5>@Localizer["computer"]</h5></figcaption>
+            </figure>
+        </div>
+        <div class="col-sm-4">
+            <figure>
+                <a asp-page="Cook">
+                    <img src="~/img/CCGMember/GS.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                </a>
+                <figcaption class="text-center"><h5>@Localizer["cook"]</h5></figcaption>
+            </figure>
+        </div>
+        <div class="col-sm-4">
+            <figure>
+                <a asp-page="Electrical">
+                    <img src="~/img/CCGMember/GT.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                </a>
+                <figcaption class="text-center"><h5>@Localizer["electrical"]</h5></figcaption>
+            </figure>
+        </div>
+        <div class="col-sm-4">
+            <figure>
+                <a asp-page="Electronics">
+                    <img src="~/img/CCGMember/EL.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                </a>
+                <figcaption class="text-center"><h5>@Localizer["electronics"]</h5></figcaption>
+            </figure>
+        </div>
+        <div class="col-sm-4">
+            <figure>
+                <a asp-page="GeographicalInformation">
+                    <img src="~/img/Student/geo.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                </a>
+                <figcaption class="text-center"><h5>@Localizer["geo"]</h5></figcaption>
+            </figure>
+        </div>
+        <div class="col-sm-4">
+            <figure>
+                <a asp-page="NauticalDeck">
+                    <img src="~/img/CCGMember/SC.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                </a>
+                <figcaption class="text-center"><h5>@Localizer["deck"]</h5></figcaption>
+            </figure>
+        </div>
+        <div class="col-sm-4">
+            <figure>
+                <a asp-page="NauticalEngineering">
+                    <img src="~/img/CCGMember/Officer-Eng.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                </a>
+                <figcaption class="text-center"><h5>@Localizer["engineering"]</h5></figcaption>
+            </figure>
+        </div>
+        <div class="col-sm-4">
+            <figure>
+                <a class="nav-link" asp-page="Trades">
+                    <img src="~/img/CCGMember/GL.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                </a>
+                <figcaption class="text-center"><h5>@Localizer["trades"]</h5></figcaption>
+            </figure>
+        </div>
+        <div class="row">
+            <div class="col-lg-12 mrgn-bttm-md">
+                <nav role="navigation" class="mrgn-bttm-lg">
+                    <h2 class="wb-inv">Document navigation</h2>
+                    <ul class="pager">
+                        <li class="previous"><a asp-page="../Index" class="btn btn-default" type="button" rel="prev">@Localizer["Previous"]</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </section>
 
