--- a/Web/Pages/Candidate/Shoreside/SimilarDetails.cshtml
+++ b/Web/Pages/Candidate/Shoreside/SimilarDetails.cshtml
@@ -9,12 +9,12 @@
     var isEnglish = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName == "en";
     var RouteParameter = new Dictionary<string, string> { { "id", Model.RouteParameter }, { "percentmatch", "&percentMatch=80" }, { "positionid", Model.PositionId.ToString() } };
     var routedata = new Dictionary<string, string> { { "positionid", Model.PositionId.ToString() }, { "groupid", Model.GroupId.ToString() }, { "level", Model.Level.ToString() } };
-    var paramdatasimilar = new Dictionary<string, string>
-                           {
+    var paramdata = new Dictionary<string, string>
+                            {
                                  {"previouspagesimilar", "../../Candidate/Shoreside/SimilarDetails" },
                                  {"id", Model.Id.ToString() },
                                  {"positionid", Model.PositionId.ToString()},
-                                 {"previouspage","SimilarList" }
+                                 {"previouspage",Model.PreviousPage }
                             };
 }
 
@@ -28,8 +28,8 @@
             <div class="col-md-12 mrgn-tp-md mrgn-bttm-md">
                 <div class="col-md-9"><h3>@Localizer["Question1"]</h3></div>
                 <div class="col-md-3 mrgn-tp-lg">
-                    <a class="btn btn-primary mrgn-rght-md" type="button" asp-route-positionid="@Model.PositionId" asp-page="Compare/AllObjective">@Localizer["Compare"]</a>
-                    <a class="btn btn-primary mrgn-rght-md" type="button" asp-all-route-data="@paramdatasimilar" asp-page="../../CCGMember/Similar/SimilarSearch">@Localizer["Similar"]</a>
+                    <a class="btn btn-primary mrgn-rght-md" type="button" asp-all-route-data="@paramdata" asp-page="Compare/AllObjective">@Localizer["Compare"]</a>
+                    <a class="btn btn-primary mrgn-rght-md" type="button" asp-all-route-data="@paramdata" asp-page="../../CCGMember/Similar/SimilarSearch">@Localizer["Similar"]</a>
                 </div>
             </div>
 
@@ -125,7 +125,7 @@
                 <nav role="navigation" class="mrgn-bttm-lg">
                     <h2 class="wb-inv">Document navigation</h2>
                     <ul class="pager">
-                        <li class="previous"><a class="btn btn-default" type="button" rel="prev" asp-page="SimilarList" asp-route-id="@Model.Id.ToString()">@Localizer["Previous"]</a></li>
+                        <li class="previous"><a class="btn btn-default" type="button" rel="prev" asp-page="@Model.PreviousPage" asp-route-id="@Model.Id.ToString()">@Localizer["Previous"]</a></li>
                     </ul>
                 </nav>
             </div>
