--- a/Web/Pages/Student/College/NauticalDeck.cshtml
+++ b/Web/Pages/Student/College/NauticalDeck.cshtml
@@ -12,94 +12,94 @@
 <div class="mrgn-tp-lg">
     <h3 class="text-center">@Localizer["seagoing"]</h3>
 
-        <table class="table table-hover table-responsive table-bordered">
-            <thead>
-                <tr>
-                    <th class="bg-primary" width="15%">@Localizer["level"]</th>
-                    <th class="bg-primary" width="73%">@Localizer["position"]</th>
-                    <th class="bg-primary" width="12%"></th>
-                </tr>
-            </thead>
-            <tbody>
-                @if (Model.SeagoingPositions.Any())
+    <table class="table table-hover table-responsive table-bordered">
+        <thead>
+            <tr>
+                <th class="bg-primary" width="15%">@Localizer["level"]</th>
+                <th class="bg-primary" width="73%">@Localizer["position"]</th>
+                <th class="bg-primary" width="12%"></th>
+            </tr>
+        </thead>
+        <tbody>
+            @if (Model.SeagoingPositions.Any())
+            {
+                @foreach (var position in Model.SeagoingPositions)
                 {
-                    @foreach (var position in Model.SeagoingPositions)
-                    {
-                        var routedata = new Dictionary<string, string>
-                         {
-                    {"previouspage", "../Crew/Engineering/PositionList" },
+                    var routedata = new Dictionary<string, string>
+                 {
+                    {"previouspage", "../../../Student/College/NauticalDeck" },
                     { "positionid",  position.JobTitleId.ToString()},
                  };
 
-                        <tr>
-                            <td>@position.JobGroupCode-@position.JobLevelValue</td>
-                            <td>@(isEnglish ? position.JobTitleEng : position.JobTitleFre)</td>
-                            <td><a asp-page="../../Candidate/Seagoing/Common/Details" asp-all-route-data="@routedata" role="button">@Localizer["More Details"]</a></td>
-                        </tr>
-                    }
-                }
-                else
-                {
                     <tr>
-                        <td></td>
-                        <td>@Localizer["noseagoing"]</td>
-                        <td></td>
+                        <td>@position.JobGroupCode-@position.JobLevelValue</td>
+                        <td>@(isEnglish ? position.JobTitleEng : position.JobTitleFre)</td>
+                        <td><a asp-page="../../Candidate/Seagoing/Common/Details" asp-all-route-data="@routedata" role="button">@Localizer["More Details"]</a></td>
                     </tr>
                 }
-            </tbody>
-        </table>
-   
-
-        <h3 class="text-center">@Localizer["shoreside"]</h3>
-        <table class="table table-hover table-responsive table-bordered">
-            <thead>
+            }
+            else
+            {
                 <tr>
-                    <th class="bg-primary" width="15%">@Localizer["level"]</th>
-                    <th class="bg-primary" width="73%">@Localizer["position"]</th>
-                    <th class="bg-primary" width="12%"></th>
+                    <td></td>
+                    <td>@Localizer["noseagoing"]</td>
+                    <td></td>
                 </tr>
-            </thead>
+            }
+        </tbody>
+    </table>
 
-            <tbody>
-                @if (Model.ShoreSidePositions.Any())
+
+    <h3 class="text-center">@Localizer["shoreside"]</h3>
+    <table class="table table-hover table-responsive table-bordered">
+        <thead>
+            <tr>
+                <th class="bg-primary" width="15%">@Localizer["level"]</th>
+                <th class="bg-primary" width="73%">@Localizer["position"]</th>
+                <th class="bg-primary" width="12%"></th>
+            </tr>
+        </thead>
+
+        <tbody>
+            @if (Model.ShoreSidePositions.Any())
+            {
+                @foreach (var position in Model.ShoreSidePositions)
                 {
-                    @foreach (var position in Model.ShoreSidePositions)
-                    {
-                        var routedata = new Dictionary<string, string>
-                         {
-                    {"previouspage", "../Crew/Engineering/PositionList" },
+                    var routedata = new Dictionary<string, string>
+                 {
+                    {"previouspage", "../../Student/College/NauticalDeck" },
                     { "positionid",  position.JobTitleId.ToString()},
                  };
 
-                        <tr>
-                            <td>@position.JobGroupCode-@position.JobLevelValue</td>
-                            <td>@(isEnglish ? position.JobTitleEng : position.JobTitleFre)</td>
-                            <td><a asp-page="../../Candidate/Seagoing/Common/Details" asp-all-route-data="@routedata" role="button">@Localizer["More Details"]</a></td>
-                        </tr>
-                    }
-                }
-                else
-                {
                     <tr>
-                        <td></td>
-                        <td>@Localizer["noshoreside"]</td>
-                        <td></td>
+                        <td>@position.JobGroupCode-@position.JobLevelValue</td>
+                        <td>@(isEnglish ? position.JobTitleEng : position.JobTitleFre)</td>
+                        <td><a asp-page="../../Candidate/Shoreside/SimilarDetails" asp-all-route-data="@routedata" role="button">@Localizer["More Details"]</a></td>
                     </tr>
                 }
-            </tbody>
-        </table>
+            }
+            else
+            {
+                <tr>
+                    <td></td>
+                    <td>@Localizer["noshoreside"]</td>
+                    <td></td>
+                </tr>
+            }
+        </tbody>
+    </table>
 
-        <div class="row">
-            <div class="col-lg-12 mrgn-bttm-md">
-                <nav role="navigation" class="mrgn-bttm-lg">
-                    <h2 class="wb-inv">Document navigation</h2>
-                    <ul class="pager">
-                        <li class="previous"><a href="College" class="btn btn-default" type="button" rel="prev">@Localizer["Previous"]</a></li>
-                    </ul>
-                </nav>
-            </div>
+    <div class="row">
+        <div class="col-lg-12 mrgn-bttm-md">
+            <nav role="navigation" class="mrgn-bttm-lg">
+                <h2 class="wb-inv">Document navigation</h2>
+                <ul class="pager">
+                    <li class="previous"><a asp-page="AllPositions" class="btn btn-default" type="button" rel="prev">@Localizer["Previous"]</a></li>
+                </ul>
+            </nav>
         </div>
     </div>
+</div>
 
 
 
