--- a/Web/Pages/Student/Index.cshtml
+++ b/Web/Pages/Student/Index.cshtml
@@ -5,33 +5,43 @@
     ViewData["Title"] = "Students";
 }
 
-<section role="contentinfo">
-    <div class="col-md-12">
-        <h2>@Localizer["Q1"]</h2>
+    <section role="contentinfo">
+        <div class="col-md-12">
+            <h2>@Localizer["Q1"]</h2>
 
-        <div class="col-sm-4">
-            <figure>
-                <a class="nav-link" asp-page="HighSchool/AllPositions">
-                    <img src="~/img/Student/Highschool.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
-                </a>
-                <figcaption><h4 class="text-center">@Localizer["HighSchool"]</h4></figcaption>
-            </figure>
+            <div class="col-sm-4">
+                <figure>
+                    <a class="nav-link" asp-page="HighSchool/AllPositions">
+                        <img src="~/img/Student/Highschool.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                    </a>
+                    <figcaption><h4 class="text-center">@Localizer["HighSchool"]</h4></figcaption>
+                </figure>
+            </div>
+            <div class="col-sm-4">
+                <figure>
+                    <a asp-page="College/AllPositions">
+                        <img src="~/img/Student/TechCollege.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                    </a>
+                    <figcaption><h4 class="text-center">@Localizer["TechCollege"]</h4></figcaption>
+                </figure>
+            </div>
+            <div class="col-sm-4">
+                <figure>
+                    <a asp-page="University/AllPositions">
+                        <img src="~/img/Student/University.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                    </a>
+                    <figcaption><h4 class="text-center">@Localizer["University"]</h4></figcaption>
+                </figure>
+            </div>
         </div>
-        <div class="col-sm-4">
-            <figure>
-                <a asp-page="College/AllPositions">
-                    <img src="~/img/Student/TechCollege.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
-                </a>
-                <figcaption><h4 class="text-center">@Localizer["TechCollege"]</h4></figcaption>
-            </figure>
+        <div class="row">
+            <div class="col-lg-12 mrgn-bttm-md">
+                <nav role="navigation" class="mrgn-bttm-lg">
+                    <h2 class="wb-inv">Document navigation</h2>
+                    <ul class="pager">
+                        <li class="previous"><a asp-page="../Index" class="btn btn-default" type="button" rel="prev">@Localizer["Previous"]</a></li>
+                    </ul>
+                </nav>
+            </div>
         </div>
-        <div class="col-sm-4">
-            <figure>
-                <a asp-page="University/AllPositions">
-                    <img src="~/img/Student/University.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
-                </a>
-                <figcaption><h4 class="text-center">@Localizer["University"]</h4></figcaption>
-            </figure>
-        </div>
-    </div>
-</section>
+    </section>
