--- a/Web/Pages/Student/University/AllPositions.cshtml
+++ b/Web/Pages/Student/University/AllPositions.cshtml
@@ -80,14 +80,15 @@
             </figure>
         </div>
         <div class="clearfix"></div>
-        <div class="row col-lg-12 mrgn-bttm-md">
-            <nav role="navigation" class="mrgn-bttm-lg">
-                <h2 class="wb-inv">Document navigation</h2>
-                <ul class="pager">
-                    <li class="previous"><a href="Index" class="btn btn-default" type="button" rel="prev">@Localizer["Previous"]</a></li>
-                </ul>
-            </nav>
+        <div class="row">
+            <div class="col-lg-12 mrgn-bttm-md">
+                <nav role="navigation" class="mrgn-bttm-lg">
+                    <h2 class="wb-inv">Document navigation</h2>
+                    <ul class="pager">
+                        <li class="previous"><a asp-page="../Index" class="btn btn-default" type="button" rel="prev">@Localizer["Previous"]</a></li>
+                    </ul>
+                </nav>
+            </div>
         </div>
-
     </section>
 
