Seeded competencies and new images and edited mockups

--- a/Web/Pages/Mockups/External/External_Details.cshtml
+++ b/Web/Pages/Mockups/External/External_Details.cshtml
@@ -4,8 +4,8 @@
     ViewData["Title"] = "External Position Details";
 }
 <div class="col-md-12 mrgn-tp-md mrgn-bttm-md">
-    <a href="#print"><span class="glyphicon glyphicon-print pull-right mrgn-lft-md" alt="Print document"></span> </a>
-    <a href="#save"><span class="glyphicon glyphicon-save pull-right" alt="Save document"></span> </a>
+    <a href="#"><span class="glyphicon glyphicon-print pull-right mrgn-lft-md" title="Print PDF" alt="Print document"></span> </a>
+    <a href="#"><span class="glyphicon glyphicon-save pull-right" title="Save PDF" alt="Save document"></span> </a>
 </div>
 
 <div class="col-md-12 mrgn-tp-md mrgn-bttm-md">
