--- a/Web/Pages/Mockups/External/External_List.cshtml
+++ b/Web/Pages/Mockups/External/External_List.cshtml
@@ -5,9 +5,9 @@
     ViewData["Title"] = "External Candidate Position List";
 }
 
-<div class="row mrgn-tp-md">
-    <button class="btn btn-primary mrgn-lft-md" type="button">@Localizer["Print PDF"]</button>
-    <button class="btn btn-primary pull-right mrgn-rght-md" type="button">@Localizer["Save PDF"]</button>
+<div class="col-md-12 mrgn-tp-md mrgn-bttm-md">
+    <a href="#"><span class="glyphicon glyphicon-print pull-right mrgn-lft-md" title="@Localizer["Print PDF"]" alt="@Localizer["Print PDF"]"></span> </a>
+    <a href="#"><span class="glyphicon glyphicon-save pull-right" title="@Localizer["Save PDF"]" alt="@Localizer["Save PDF"]"></span> </a>
 </div>
 <div class="mrgn-tp-lg">
     <h3 class="text-center">@Localizer["CCG POSITIONS"]</h3>
