--- a/Web/Pages/Mockups/External/Ship_Crew.cshtml
+++ b/Web/Pages/Mockups/External/Ship_Crew.cshtml
@@ -19,7 +19,7 @@
     <div class="col-sm-4">
         <figure>
             <a href="Crew_Engineering">
-                <img src="~/img/CCGMember/oiler.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+                <img src="~/img/CCGMember/Oiler.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
             </a>
             <figcaption><h4 class="text-center">@Localizer["Engineering"]</h4></figcaption>
         </figure>
