--- a/Web/Pages/Mockups/External/Ship_Officer.cshtml
+++ b/Web/Pages/Mockups/External/Ship_Officer.cshtml
@@ -5,36 +5,42 @@
 }
 
 <section role="contentinfo">
-    
-        <h2>@Localizer["Q1"]</h2>
-        
-            <div class="col-sm-6">
-                <figure>
-                    <a class="nav-link" href="Nav_Officer">
-                        <img src="~/img/CCGMember/Officer-Nav.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
-                    </a>
-                    <figcaption><h4 class="text-center">@Localizer["Nav"]</h4></figcaption>
-                </figure>
-            </div>
-            <div class="col-sm-6">
-                <figure>
-                    <a href="Eng_Officer">
-                        <img src="~/img/CCGMember/Officer-Eng.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
-                    </a>
-                    <figcaption><h4 class="text-center">@Localizer["Eng"]</h4></figcaption>
-                </figure>
-            </div>
-            <div class="row">
-                <div class="col-lg-12 mrgn-bttm-md">
-                    <nav role="navigation" class="mrgn-bttm-lg">
 
-                        <h2 class="wb-inv">Document navigation</h2>
+    <h2>@Localizer["Q1"]</h2>
 
-                        <ul class="pager">
-                            <li class="previous"><a href="External_Seagoing" rel="prev">Previous</a></li>
-                        </ul>
+    <div class="col-sm-10 col-sm-offset-1 well text-center ">
+        <p>Seagoing navigation and engineering officers have additional requirements associated with a matrix of certification (i.e. completed training in a recognized institution), sea time (i.e. time logged at sea), and ship class (i.e. vessel size, power, type).</p>
+        <p>Such details may be found in Canada’s Marine Personnel Regulations: <a rel="external" target="_blank" href="https://laws-lois.justice.gc.ca/PDF/SOR-2007-115.pdf">https://laws-lois.justice.gc.ca/PDF/SOR-2007-115.pdf</a></p>
+    </div>
 
-                    </nav>
-                </div>
-            </div>
+    <div class="col-sm-6">
+        <figure>
+            <a class="nav-link" href="Nav_Officer">
+                <img src="~/img/CCGMember/Officer-Nav.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+            </a>
+            <figcaption><h4 class="text-center">@Localizer["Nav"]</h4></figcaption>
+        </figure>
+    </div>
+    <div class="col-sm-6">
+        <figure>
+            <a href="Eng_Officer">
+                <img src="~/img/Candidate/Officer Chief Engineer.jpg" alt="Photo of" class="img-thumbnail img-responsive mrgn-bttm-sm" />
+            </a>
+            <figcaption><h4 class="text-center">@Localizer["Eng"]</h4></figcaption>
+        </figure>
+    </div>
+
+    <div class="row">
+        <div class="col-lg-12 mrgn-bttm-md">
+            <nav role="navigation" class="mrgn-bttm-lg">
+
+                <h2 class="wb-inv">Document navigation</h2>
+
+                <ul class="pager">
+                    <li class="previous"><a href="External_Seagoing" rel="prev">Previous</a></li>
+                </ul>
+
+            </nav>
+        </div>
+    </div>
 </section>
