--- a/Web/Pages/Mockups/Student/University.cshtml
+++ b/Web/Pages/Mockups/Student/University.cshtml
@@ -22,7 +22,7 @@
         <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
             <div class="img-container">
                 <a href="Student_List">
-                    <img src="~/img/CCGMember/AS.jpg" alt="Photo of" class="img-responsive" />
+                    <img src="~/img/Student/Business.jpg" alt="Photo of" class="img-responsive" />
                 </a>
             </div>
             <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-sm"><a style="text-decoration:none" href="Student_List">@Localizer["business"]</a></h4></figcaption>
@@ -52,7 +52,7 @@
         <figure class="thumbnail eqht-trgt" style="vertical-align: top;line-height: 1.0">
             <div class="img-container">
                 <a href="Student_List">
-                    <img src="~/img/CCGMember/PM.jpg" alt="Photo of" class="img-responsive" />
+                    <img src="~/img/Student/General Arts.jpg" alt="Photo of" class="img-responsive" />
                 </a>
             </div>
             <figcaption class="caption text-center"><h4 class="h6  mrgn-tp-0 mrgn-bttm-0"><a href="Student_List">@Localizer["arts"]</a><br /><small>@Localizer["language"]</small></h4></figcaption>
@@ -62,7 +62,7 @@
         <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
             <div class="img-container">
                 <a href="Student_List">
-                    <img src="~/img/CCGMember/NU.jpg" alt="Photo of" class="img-responsive" />
+                    <img src="~/img/Student/Nurse2.jpg" alt="Photo of" class="img-responsive" />
                 </a>
             </div>
             <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-sm"><a href="Student_List">@Localizer["sciences"]</a></h4></figcaption>
@@ -72,7 +72,7 @@
         <figure class="thumbnail eqht-trgt" style="vertical-align: top; line-height:1.0">
             <div class="img-container">
                 <a href="Student_List">
-                    <img src="~/img/CCGMember/EC.jpg" alt="Photo of" class="img-responsive" />
+                    <img src="~/img/Student/Social Science.jpg" alt="Photo of" class="img-responsive" />
                 </a>
             </div>
             <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-0 mrgn-bttm-0"><a href="Student_List">@Localizer["social"]</a><br /><small>@Localizer["economics"]</small></h4></figcaption>
