--- a/Web/Pages/Mockups/External/Crew_Logistics.cshtml
+++ b/Web/Pages/Mockups/External/Crew_Logistics.cshtml
@@ -5,8 +5,8 @@
 @{
 }
 <div class="col-md-12 mrgn-tp-md mrgn-bttm-md">
-    <a href="#print"><span class="glyphicon glyphicon-print pull-right mrgn-lft-md" alt="Print document"></span> </a>
-    <a href="#save"><span class="glyphicon glyphicon-save pull-right" alt="Save document"></span> </a>
+    <a href="#"><span class="glyphicon glyphicon-print pull-right mrgn-lft-md" title="Print PDF" alt="Print document"></span> </a>
+    <a href="#"><span class="glyphicon glyphicon-save pull-right" title="Save PDF" alt="Save document"></span> </a>
 </div>
 <div class="mrgn-tp-lg">
     <h3 class="text-center">@Localizer["CCG POSITIONS"]</h3>
