--- a/Web/Pages/Mockups/External/MAO10-142-Details.cshtml
+++ b/Web/Pages/Mockups/External/MAO10-142-Details.cshtml
@@ -1,7 +1,8 @@
 ﻿@page
-@model Web.Pages.Mockups.External.Crew_DeckhandModel
+@model Web.Pages.Mockups.External.MAO10_142_DetailsModel
 @{
 }
+
 
 <div class="col-md-12 mrgn-tp-md mrgn-bttm-md">
     <a href="#"><span class="glyphicon glyphicon-print pull-right mrgn-lft-md" title="Print PDF" alt="Print document"></span> </a>
@@ -9,7 +10,7 @@
 </div>
 
 <div class="col-md-12 mrgn-tp-md mrgn-bttm-md">
-    <div class="col-md-9"><h3>Would you like to compare or find similar positions within the organization to your selected position below?</h3></div>
+    <div class="col-md-9"><h3>Would you like to compare or find similar positions to the position below?</h3></div>
     <div class="col-md-3 mrgn-tp-lg"><a href="Crew_Compare" class="btn btn-primary mrgn-lft-md" type="button">Compare</a> <a href="Similar_Positions" class="btn btn-primary mrgn-rght-md" type="button">Similar</a></div>
 </div>
 
@@ -17,47 +18,23 @@
     <table class="table table-hover table-responsive table-bordered">
         <thead>
             <tr>
-                <th class="bg-primary" colspan="2">POSITIONS DETAILS: SC-DED-02 Deckhand</th>
+                <th class="bg-primary" colspan="2"><h4 class="mrgn-bttm-0 mrgn-tp-0">POSITIONS DETAILS: SO-MAO-10 Commanding Officer</h4></th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <th colspan="2" style="background-color:#f2f2f2">CERTIFICATIONS</th>
+                <th colspan="2" style="background-color:#f2f2f2">CERTIFICATES</th>
             </tr>
             <tr>
-                <td>Restricted Operator Certificate-Maritime Commerical (ROC-MC)</td>
+                <td colspan="2">Restricted Operator Certificate-Maritime Commerical (ROC-MC)</td>
             </tr>
             <tr>
-                <td>Marine Emergency Duties - Basic Safety</td>
+                <td colspan="2">Master, Near Coastal (or Master Mariner depending on voyage)</td>
             </tr>
             <tr>
-                <td>Marine Emergency Duties - Survival Craft / Rescue Boats</td>
+                <th style="background-color:#f2f2f2">KNOWLEDGE ELEMENTS</th>
+                <th class="text-center" style="background-color:#f2f2f2">LEVEL</th>
             </tr>
-            <tr>
-                <td>Marine Emergency Duties - Proficiency in Advanced Firefighting</td>
-            </tr>
-            <tr>
-                <td>First Aid</td>
-            </tr>
-            <tr>
-                <td>Marine First Aid</td>
-            </tr>
-            <tr>
-                <td>Advanced Marine First Aid</td>
-            </tr>
-            <tr>
-                <td>Bridge Watch Certificate</td>
-            </tr>
-        </tbody>
-    </table>
-    <table class="table table-hover table-responsive table-bordered">
-        <thead>
-            <tr>
-                <th width="85%" style="background-color:#f2f2f2">KNOWLEDGE ELEMENTS</th>
-                <th width="15%" class="text-center" style="background-color:#f2f2f2">LEVEL</th>
-            </tr>
-        </thead>
-        <tbody>
             <tr>
                 <td>
                     <a href="#1" aria-controls="centred-popup" class="wb-lbx" role="button">Organizational Knowledge</a>
@@ -72,10 +49,10 @@
                     </section>
                 </td>
                 <td class="text-center">
-                    <a href="#2" aria-controls="centred-popup" class="wb-lbx"><abbr title="Level 1 Summary">1</abbr></a>
+                    <a href="#2" aria-controls="centred-popup" class="wb-lbx"><abbr title="Level 3 Summary">3</abbr></a>
                     <section id="2" class="mfp-hide modal-dialog modal-content overlay-def">
                         <header class="modal-header">
-                            <h2 class="modal-title">Position Level: 1</h2>
+                            <h2 class="modal-title">Position Level: 3</h2>
                         </header>
                         <div class="modal-body ">
                             <p>Fundamental Awareness (Common knowledge or an understanding of basic techniques and concepts)</p>
@@ -98,10 +75,10 @@
                     </section>
                 </td>
                 <td class="text-center">
-                    <a href="#4" aria-controls="centred-popup" class="wb-lbx"><abbr title="Level 1 Summary">1</abbr></a>
+                    <a href="#4" aria-controls="centred-popup" class="wb-lbx"><abbr title="Level 3 Summary">3</abbr></a>
                     <section id="4" class="mfp-hide modal-dialog modal-content overlay-def">
                         <header class="modal-header">
-                            <h2 class="modal-title">Position Level: 1</h2>
+                            <h2 class="modal-title">Position Level: 3</h2>
                         </header>
                         <div class="modal-body ">
                             <p>Fundamental Awareness (Common knowledge or an understanding of basic techniques and concepts)</p>
@@ -110,79 +87,100 @@
                     </section>
                 </td>
             </tr>
-        </tbody>
-    </table>
 
-    <table class="table table-hover table-responsive table-bordered">
-        <thead>
-            <tr>
-                <th width="85%" style="background-color:#f2f2f2">TECHNICAL ELEMENTS</th>
-                <th width="15%" class="text-center" style="background-color:#f2f2f2">LEVEL</th>
-            </tr>
-        </thead>
-        <tbody>
             <tr>
                 <td>
-                    <a href="#7" aria-controls="centred-popup" class="wb-lbx" role="button">Rigging and Lifting</a>
+                    <a href="#5" aria-controls="centred-popup" class="wb-lbx" role="button">Marine Domain Awareness Knowledge</a>
+                    <section id="5" class="mfp-hide modal-dialog modal-content overlay-def">
+                        <header class="modal-header">
+                            <h2 class="modal-title">Marine Domain Awareness Knowledge</h2>
+                        </header>
+                        <div class="modal-body ">
+                            <p>Knowledge of the programs the Canadian Coast Guard manages and supports. Understands the services and delivery of program mandates:  Search and Rescue (SAR), Icebreaking (IB), Aids to Navigation (AtoN), Environmental Response (ER), Conservation and Protection (DFO C&P), Oceanography (DFO Science) and Fisheries Research (DFO Science).</p>
+                            <button class="btn btn-primary popup-modal-dismiss" type="button">Close</button>
+                        </div>
+                    </section>
+                </td>
+                <td class="text-center">
+                    <a href="#6" aria-controls="centred-popup" class="wb-lbx"><abbr title="Level 3 Summary">3</abbr></a>
+                    <section id="6" class="mfp-hide modal-dialog modal-content overlay-def">
+                        <header class="modal-header">
+                            <h2 class="modal-title">Position Level: 3</h2>
+                        </header>
+                        <div class="modal-body ">
+                            <p>Fundamental Awareness (Common knowledge or an understanding of basic techniques and concepts)</p>
+                            <p>Basic knowledge of the Coast Guard and its role as an enabler of various programs.</p>
+                        </div>
+                    </section>
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <a href="#7" aria-controls="centred-popup" class="wb-lbx" role="button">Deck Management Knowledge</a>
                     <section id="7" class="mfp-hide modal-dialog modal-content overlay-def">
                         <header class="modal-header">
-                            <h2 class="modal-title">Rigging and Lifting</h2>
+                            <h2 class="modal-title">Deck Management Knowledge</h2>
                         </header>
                         <div class="modal-body ">
-                            <p>Executes load-lifting, towing, storing, deployment operations on cargo, nets, and equipment with proper adherence to Occupational Health and Safety (OHS) requirements, signaling and communication protocols with diligent care for equipment.</p>
+                            <p>Knowledge of the programs the Canadian Coast Guard manages and supports. Understands the services and delivery of program mandates:  Search and Rescue (SAR), Icebreaking (IB), Aids to Navigation (AtoN), Environmental Response (ER), Conservation and Protection (DFO C&P), Oceanography (DFO Science) and Fisheries Research (DFO Science).</p>
                             <button class="btn btn-primary popup-modal-dismiss" type="button">Close</button>
                         </div>
                     </section>
                 </td>
                 <td class="text-center">
-                    <a href="#8" aria-controls="centred-popup" class="wb-lbx"><abbr title="Level 1 Summary">1</abbr></a>
+                    <a href="#8" aria-controls="centred-popup" class="wb-lbx"><abbr title="Level 4 Summary">4</abbr></a>
                     <section id="8" class="mfp-hide modal-dialog modal-content overlay-def">
                         <header class="modal-header">
-                            <h2 class="modal-title">Position Level: 1</h2>
+                            <h2 class="modal-title">Position Level: 4</h2>
                         </header>
                         <div class="modal-body ">
                             <p>Fundamental Awareness (Common knowledge or an understanding of basic techniques and concepts)</p>
-                            <p>Where assisted or trained, employs safe operating procedures in erecting a temporary jib or derrick for boats or painting or gangway uses. Learns splicing and rigging gear to make slings and tackle. Ties appropriate knots as required.</p>
+                            <p>Basic knowledge of the Coast Guard and its role as an enabler of various programs.</p>
                         </div>
                     </section>
                 </td>
+            </tr>
+
+
+            <tr>
+                <th style="background-color:#f2f2f2">TECHNICAL ELEMENTS</th>
+                <th class="text-center" style="background-color:#f2f2f2">LEVEL</th>
             </tr>
             <tr>
                 <td>
-                    <a href="#9" aria-controls="centred-popup" class="wb-lbx" role="button">Small Boat, Helicopter, Barges, Tackle Operations</a>
+                    <a href="#9" aria-controls="centred-popup" class="wb-lbx" role="button">Bridge Management</a>
                     <section id="9" class="mfp-hide modal-dialog modal-content overlay-def">
                         <header class="modal-header">
-                            <h2 class="modal-title">Small Boat, Helicopter, Barges, Tackle Operations</h2>
+                            <h2 class="modal-title">Bridge Management</h2>
                         </header>
                         <div class="modal-body ">
-                            <p>Practices seamanship in areas such as vessel maintenance, steering, lookout, the use and maintenance of small vessels, helicopter procedures, and tackle use, stowage, and maintenance.</p>
+                            <p>The management of a bridge watch to con vessels confidently and safely under various conditions and be able to make a more effective contribution to the bridge team during ship maneuvering in all conditions. Elements include navigation, radar, plotting, vessel handling, emergency management, collision avoidance, and watchkeeping protocols.</p>
                             <button class="btn btn-primary popup-modal-dismiss" type="button">Close</button>
                         </div>
                     </section>
                 </td>
                 <td class="text-center">
-                    <a href="#10" aria-controls="centred-popup" class="wb-lbx"><abbr title="Level 1 Summary">1</abbr></a>
+                    <a href="#10" aria-controls="centred-popup" class="wb-lbx"><abbr title="Level 1 Summary">4</abbr></a>
                     <section id="10" class="mfp-hide modal-dialog modal-content overlay-def">
                         <header class="modal-header">
-                            <h2 class="modal-title">Position Level: 1</h2>
+                            <h2 class="modal-title">Position Level: 4</h2>
                         </header>
                         <div class="modal-body ">
                             <p>Fundamental Awareness (Common knowledge or an understanding of basic techniques and concepts)</p>
-                            <p>Paints and stores small vessels and lifesaving equipment. Participates in cargo stowage, cleaning/sanding, and paint evolutions.</p>
+                            <p>Basic use of navigational principles. Stands a steering watch and plots speed, distance, and time calculations, along pre-established routes. Studies charts and corrections. Researches weather and tide information. Observes traffic.</p>
                         </div>
                     </section>
                 </td>
             </tr>
-        </tbody>
-    </table>
-    <table class="table table-hover table-responsive table-bordered">
-        <thead>
             <tr>
-                <th width="85%" style="background-color:#f2f2f2">BEHAVIOURAL ELEMENTS</th>
-                <th width="15%" class="text-center" style="background-color:#f2f2f2">LEVEL</th>
+                <td>Problem Solving</td>
+                <td class="text-center">1</td>
             </tr>
-        </thead>
-        <tbody>
+            <tr>
+                <th style="background-color:#f2f2f2">BEHAVIOURAL ELEMENTS</th>
+                <th class="text-center" style="background-color:#f2f2f2">LEVEL</th>
+            </tr>
             <tr>
                 <td>Demonstrating Integrity and Respect</td>
                 <td class="text-center">1</td>
@@ -197,14 +195,20 @@
             </tr>
         </tbody>
     </table>
-</div>
+
+
     <div class="row">
         <div class="col-lg-12 mrgn-bttm-md">
             <nav role="navigation" class="mrgn-bttm-lg">
+
                 <h2 class="wb-inv">Document navigation</h2>
+
                 <ul class="pager">
-                    <li class="previous"><a href="Crew_Deck" class="btn btn-default" type="button" rel="prev" >Previous</a></li>
+                    <li class="previous"><a href="Nav_Officer" rel="prev">Previous</a></li>
                 </ul>
+
             </nav>
         </div>
     </div>
+
+</div>
