--- a/Web/Pages/Mockups/External/Nav_Officer.cshtml
+++ b/Web/Pages/Mockups/External/Nav_Officer.cshtml
@@ -4,10 +4,10 @@
 @{
 }
 
-    <div class="col-md-12 mrgn-tp-md mrgn-bttm-md">
-        <a href="#print"><span class="glyphicon glyphicon-print pull-right mrgn-lft-md" alt="Print document"></span> </a>
-        <a href="#save"><span class="glyphicon glyphicon-save pull-right" alt="Save document"></span> </a>
-    </div>
+<div class="col-md-12 mrgn-tp-md mrgn-bttm-md">
+    <a href="#"><span class="glyphicon glyphicon-print pull-right mrgn-lft-md" title="Print PDF" alt="Print document"></span> </a>
+    <a href="#"><span class="glyphicon glyphicon-save pull-right" title="Save PDF" alt="Save document"></span> </a>
+</div>
 
     
     <div class="mrgn-tp-lg">
@@ -62,8 +62,8 @@
                     <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
                 <tr>
                     <td>SO-MAO-04</td>
-                    <td>Small Vessel Commanding Officer</td>
-                    <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+                    <td>Officer in Charge 47’ Lifeboat/CCGC Small Vessels</td>
+                    <td><a asp-page="MAO4-Details" role="button">@Localizer["More Details"]</a></td>
                 </tr>
                 <tr>
                     <td>SO-MAO-05</td>
@@ -73,46 +73,46 @@
                 <tr>
                     <td>SO-MAO-05</td>
                     <td>Chief Officer</td>
-                    <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+                    <td><a asp-page="MAO5-127-Details" role="button">@Localizer["More Details"]</a></td>
                 </tr>
                 <tr>
-                    <td>SO-MAO-06</td>
-                    <td>Watchkeeping Chief Officer</td>
-                    <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+                    <td>SO-MAO-05</td>
+                    <td>Chief Officer (CCGS Eckaloo/Dumit)</td>
+                    <td><a asp-page="MAO5-128-Details" role="button">@Localizer["More Details"]</a></td>
                 </tr>
                 <tr>
                     <td>SO-MAO-06</td>
                     <td>Chief Officer</td>
-                    <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+                    <td><a asp-page="MAO6-130-Details" role="button">@Localizer["More Details"]</a></td>
                 </tr>
                 <tr>
                     <td>SO-MAO-06</td>
                     <td>Fishing Officer</td>
-                    <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+                    <td><a asp-page="MAO6-131-Details" role="button">@Localizer["More Details"]</a></td>
                 </tr>
                 <tr>
                     <td>SO-MAO-07</td>
                     <td>Chief Officer</td>
-                    <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+                    <td><a asp-page="MAO7-133-Details" role="button">@Localizer["More Details"]</a></td>
                 <tr>
                     <td>SO-MAO-08</td>
                     <td>Commanding Officer</td>
-                    <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+                    <td><a asp-page="MAO8-139-Details" role="button">@Localizer["More Details"]</a></td>
                 </tr>
                 <tr>
                     <td>SO-MAO-09</td>
                     <td>Commanding Officer</td>
-                    <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+                    <td><a asp-page="MAO9-140-Details" role="button">@Localizer["More Details"]</a></td>
                 </tr>
                 <tr>
                     <td>SO-MAO-10</td>
                     <td>Commanding Officer</td>
-                    <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+                    <td><a asp-page="MAO10-142-Details" role="button">@Localizer["More Details"]</a></td>
                 </tr>
                 <tr>
                     <td>SO-MAO-11</td>
                     <td>Commanding Officer</td>
-                    <td><a asp-page="External_Details" role="button">@Localizer["More Details"]</a></td>
+                    <td><a asp-page="MAO11-144-Details" role="button">@Localizer["More Details"]</a></td>
                 </tr>
                 <tr>
                     <td>SO-MAO-12</td>
