--- a/Web/Pages/Mockups/Student/College.cshtml
+++ b/Web/Pages/Mockups/Student/College.cshtml
@@ -92,14 +92,14 @@
         <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
             <div class="img-container">
                 <a href="Student_List">
-                    <img src="~/img/CCGMember/Officer-Eng.jpg" alt="Photo of" class="img-responsive" />
+                    <img src="~/img/Student/Marine Engineer - College CCT.jpg" alt="Photo of" class="img-responsive" />
                 </a>
             </div>
             <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-sm"><a style="text-decoration:none" href="Student_List">@Localizer["engineering"]</a></h4></figcaption>
         </figure>
     </div>
-    <div class="col-lg-4 col-sm-6">
-        <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
+    <div class="col-lg-4 col-sm-6 pull-left">
+        <figure class="thumbnail eqht-trgt">
             <div class="img-container">
                 <a href="College_Trades_List">
                     <img src="~/img/CCGMember/GL.jpg" alt="Photo of" class="img-responsive" />
@@ -108,6 +108,7 @@
             <figcaption class="caption text-center"><h4 class="h6 mrgn-tp-sm"><a style="text-decoration:none" href="College_Trades_List">@Localizer["trades"]</a></h4></figcaption>
         </figure>
     </div>
+
     <div class="clearfix"></div>
     <div class="col-lg-12 mrgn-bttm-md">
         <nav role="navigation" class="mrgn-bttm-lg">
